--- a/angular.json
+++ b/angular.json
@@ -134,7 +134,7 @@
   "defaultProject": "gastos-app",
   "schematics": {
     "@schematics/angular:component": {
-      "styleext": "styl"
+      "styleext": "scss"
     }
   }
 }
