--- a/angular.json
+++ b/angular.json
@@ -26,13 +26,14 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.scss",
+            "styles": [              
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css"
+              "node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css",
+              "src/styles.scss"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js"
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.js"
             ]
           },
           "configurations": {
