--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ngx-smart-modal": "^7.0.3",
     "open-iconic": "^1.1.1",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
