--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "ngx-smart-modal": "^7.0.3",
+    "ngx-spinner": "^6.1.2",
     "open-iconic": "^1.1.1",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
