--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "ngx-smart-modal": "^7.0.3",
     "ngx-spinner": "^6.1.2",
     "open-iconic": "^1.1.1",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.3.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -39,9 +39,9 @@
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.0.3",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
