--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.1.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "moment": "^2.22.2",
     "ngx-smart-modal": "^7.0.3",
     "ngx-spinner": "^6.1.2",
     "open-iconic": "^1.1.1",
